<?xml version="1.0"?>
<package>
    <name>alexa_voice_control</name>
    <version>1.0.0</version>
    <description>The alexa_voice_control package</description>

    <maintainer email="donaldsa18@up.edu">Anthony Donaldson</maintainer>
    <maintainer email="yuenm18@up.edu">Matthew Yuen</maintainer>

    <license>MIT</license>

    <url type="website">https://engineering.projects.up.edu/donaldsa18/</url>
    
    <author email="donaldsa18@up.edu">Anthony Donaldson</author>
    <author email="yuenm18@up.edu">Matthew Yuen</author>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>move_base_msgs</run_depend>
    <run_depend>tf</run_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
