<?xml version="1.0"?>
<package format="2">
    <name>arduino_publisher</name>
    <version>1.0.0</version>
    <description>The arduino_publisher package</description>

    <maintainer email="donaldsa18@up.edu">Anthony Donaldson</maintainer>
    <maintainer email="yuenm18@up.edu">Matthew Yuen</maintainer>
    
    <license>MIT</license>
    
    <url type="website">https://engineering.projects.up.edu/donaldsa18/</url>
    
    <author email="donaldsa18@up.edu">Anthony Donaldson</author>
    <author email="yuenm18@up.edu">Matthew Yuen</author>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf</depend>

    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
