<?xml version="1.0"?>
<package>
    <name>nav_config</name>
    <version>0.0.0</version>
    <description>The nav_config package</description>

    <maintainer email="donaldsa18@up.edu">Anthony Donaldson</maintainer>
    <maintainer email="yuenm18@up.edu">Matthew Yuen</maintainer>

    <license>MIT</license>

    <url type="website">https://engineering.projects.up.edu/donaldsa18/</url>

    <author email="donaldsa18@up.edu">Anthony Donaldson</author>
    <author email="yuenm18@up.edu">Matthew Yuen</author>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>map_server</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>base_local_planner</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
