<package>
  <name>wheelchair</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for wheelchair</p>
    <p>This package contains configuration data, 3D models and launch files
for wheelchair robot</p>
  </description>
  <maintainer email="donaldsa18@up.edu">Anthony Donaldson</maintainer>
  <maintainer email="yuenm18@up.edu">Matthew Yuen</maintainer>
  <url type="website">https://engineering.projects.up.edu/donaldsa18/</url>
  <author email="donaldsa18@up.edu">Anthony Donaldson</author>
  <author email="yuenm18@up.edu">Matthew Yuen</author>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>