<?xml version="1.0"?>
<package>
  <name>arduino</name>
  <version>0.0.0</version>
  <description>The arduino package</description>

    <maintainer email="donaldsa18@up.edu">Anthony Donaldson</maintainer>
    <maintainer email="yuenm18@up.edu">Matthew Yuen</maintainer>
    
    <license>MIT</license>
    
    <url type="website">https://engineering.projects.up.edu/donaldsa18/</url>
    
    <author email="donaldsa18@up.edu">Anthony Donaldson</author>
    <author email="yuenm18@up.edu">Matthew Yuen</author>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>rospy</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <build_depend>rostest</build_depend>
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
